# PolyCrossArb

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  GOLIVE.md  LATENCY_PLAN.md  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
data/live/: btc_ticks_20260404.csv  btc_ticks_20260405.csv  btc_ticks_20260406.csv  btc_ticks_20260407.csv  candle_books_20260404.csv
deploy/: deploy.sh  deploy_rust.sh  healthcheck.sh  polycrossarb-arb.service  polycrossarb-candle.service  polycrossarb-healthcheck.service  polycrossarb-healthcheck.timer  polycrossarb-rust.service  polycrossarb-weather.service  polymomentum-candle.service  polymomentum-engine.service  polymomentum-healthcheck.service  polymomentum-healthcheck.timer  polymomentum-rust.service  rollback.sh  setup.sh
docs/: RUST_PORT_PLAN.md  SETUP_API_KEYS.md  candle_universe.md  cross_bot_claudemd_sync_response.md  cross_bot_distilled_cache_response.md  cross_bot_distilled_writer_landed.md  cross_bot_note_mexc_hardening.md  cross_bot_pmxt_v2_shared_cache.md  cross_bot_protocol_v1_finalized.md
rust_engine/: Cargo.toml
rust_engine/src/: clob.rs  config.rs  debug.rs  edge.rs  exchange.rs  fair_value.rs  ipc.rs  latency.rs  legacy_main.rs  lib.rs  main.rs  polymarket_ws.rs  price_state.rs  signing.rs
rust_engine/src/backtest/: btc_history.rs  distill.rs  fill_model.rs  harness.rs  l2_replay.rs  mod.rs  pmxt.rs  resolver.rs  strategies.rs  sweep.rs
rust_engine/src/data/: ctf.rs  gamma.rs  mod.rs  models.rs  scanner.rs  wallet.rs
rust_engine/src/execution/: fees.rs
rust_engine/src/live/: breaker.rs  mod.rs  paper_fill.rs  pipeline.rs  window.rs
rust_engine/src/monitoring/: alerter.rs  mod.rs  session.rs
rust_engine/src/risk/: manager.rs
rust_engine/src/strategy/: decision.rs  mod.rs  momentum.rs
rust_engine/src/sweep/: mod.rs  replay.rs  strategy.rs
scripts/: analyze_concurrency.py  analyze_session.py  backtest.py  benchmark_latency.py  derive_api_keys.py  fetch_history.py  find_safest_trade.py  oracle_backfill.py  pmxt_v2_fetch.py  run_arb.py  run_backtest.py  run_candle.py  run_collector.py  run_combined.py  run_crypto_pipeline.py  run_l2_backtest.py  run_l2_compare.py  run_l2_sweep.py  run_latency.py  run_pipeline.py  run_production.py  run_shadow.py  run_strategy_harness.py  run_weather.py  run_weather_pipeline.py  run_ws_pipeline.py  scan_once.py  smoke_test.py  validate_paper_replay.py  validate_paper_vs_v2.py
src/polycrossarb/: config.py  pipeline.py  pipeline_ws.py
src/polycrossarb/arb/: detector.py  polytope.py  projection.py
src/polycrossarb/backtest/: candle_resolver.py  candle_strategy.py  collector.py  evaluator.py  fill_model.py  l2_replay.py  replay_engine.py  strategies.py
src/polycrossarb/crypto/: candle_pipeline.py  candle_scanner.py  decision.py  deribit_vol.py  fair_value.py  momentum.py  pipeline.py  price_feed.py  scanner.py
src/polycrossarb/data/: client.py  models.py  rate_limiter.py  websocket.py
src/polycrossarb/execution/: executor.py  fees.py  liquidity.py  onchain.py  orders.py  sizing.py  wallet.py
src/polycrossarb/graph/: dependency.py  screener.py
src/polycrossarb/hyperliquid/: client.py
src/polycrossarb/ipc/: bridge.py
src/polycrossarb/kalshi/: client.py
src/polycrossarb/monitoring/: alerter.py  health.py  logging_config.py  session_monitor.py
src/polycrossarb/risk/: manager.py
src/polycrossarb/solver/: frank_wolfe.py  global_lp.py  linear.py  market_maker.py  tiered.py
src/polycrossarb/tracking/: pnl_tracker.py
src/polycrossarb/weather/: cities.py  data_sources.py  parser.py  pipeline.py  predictor.py  scanner.py  solver.py  timing.py
src/polymomentum/: config.py
src/polymomentum/backtest/: __init__.py  btc_history.py  candle_registry.py  candle_resolver.py  candle_strategy.py  collector.py  data_fetcher.py  evaluator.py  l2_replay.py  latency_model.py  (+5 more)
tests/: test_backtest_integration.py  test_btc_history_causality.py  test_candle_adapter_parity.py  test_candle_decision.py  test_executor_and_risk.py  test_fair_value_parity.py  test_ipc_bridge.py  test_projection.py  test_signing.py  test_solver.py
tests/tests/: test_detector.py  test_polytope.py  test_solver.py
(+22 files in other folders)
