[package]
name = "polycrossarb-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full", "net"] }
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "native-tls"] }
futures-util = "0.3"
chrono = "0.4"
# EIP-712 order signing
k256 = { version = "0.13", features = ["ecdsa-core", "sha256"] }
sha3 = "0.10"
# HMAC-SHA256 request auth
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
# UDS IPC
rmp-serde = "1"
rand = "0.8"
hex = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
